USBDDx-46 Дополнить код тестами
сэйвпоинт